# Sudoku-MEA-Solver

./: .gitignore  CMakeLists.txt  README.md  constants.h  main.cpp  piskvorky1.pro  resources.qrc  resultemitersigleton.cpp  resultemitersigleton.h  sudokucontroller.cpp  sudokucontroller.h  sudokudialog.cpp  sudokudialog.h  sudokuitemdelegate.cpp  sudokuitemdelegate.h  sudokutablemodel.cpp  sudokutablemodel.h  sudokuthread.cpp  sudokuthread.h
MEAsudoku/: agentsudoku.cpp  agentsudoku.h  elitelist.cpp  elitelist.h  mea.cpp  mea.h
include/: constants.h  main.h  resultemitersigleton.h  sudokucontroller.h  sudokuthread.h
include/MEAsudoku/: agentsudoku.h  elitelist.h  mea.h
resources/: resources.qrc
src/: resultemitersigleton.cpp  sudokucontroller.cpp  sudokuthread.cpp
src/MEAsudoku/: agentsudoku.cpp  elitelist.cpp  mea.cpp
